--- a/español.css
+++ b/español.css
@@ -177,7 +177,7 @@
   }  
   
   /* Tarjeta */
-  .card, .card2 {
+  .card {
     flex: 1; 
     min-width: 300px; 
     height: 320px;
@@ -191,12 +191,172 @@
     box-shadow: 0 0 5px #ffffff80;
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
+
+  .pensar {
+    flex: 1; 
+    min-width: 300px; 
+    height: 350px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
   
-  .card:hover, .card2:hover {
+  .pensar:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
   }
   
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .torre {
+    flex: 1; 
+    min-width: 300px; 
+    height: 560px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .torre:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+  
+  .mision {
+    flex: 1; 
+    min-width: 300px; 
+    height: 480px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .mision:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .valores {
+    flex: 1; 
+    min-width: 300px; 
+    height: 420px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .valores:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .torrediseño {
+    flex: 1; 
+    min-width: 300px; 
+    height: 540px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .torrediseño:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .hielo {
+    flex: 1; 
+    min-width: 300px; 
+    height: 510px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .hielo:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .termometro {
+    flex: 1; 
+    min-width: 300px; 
+    height: 680px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .termometro:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .aislante {
+    flex: 1; 
+    min-width: 300px; 
+    height: 680px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .aislante:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
   .foto {
     width: 100%;
     height: 100%;
@@ -233,7 +393,7 @@
     }
 
     /* Tarjetas */
-    .card {
+    .card, .pensar, .torre, .mision, .valores, .torrediseño, .hielo, .termometro, .aislante {
         flex: 1 1 auto; 
         max-width: 90%; 
         height: auto; 
@@ -369,7 +529,7 @@
     }
 
     /* Tarjetas */
-    .card {
+    .card, .pensar, .torre, .mision, .valores, .torrediseño, .hielo, .termometro, .aislante {
         flex: 1 1 auto; 
         max-width: 90%; 
         height: auto; 
@@ -506,7 +666,7 @@
     }
 
     /* Tarjetas */
-    .card {
+    .card, .pensar, .torre, .mision, .valores, .torrediseño, .hielo, .termometro, .aislante {
         flex: 1 1 auto; 
         max-width: 100%; 
         height: auto; 
@@ -630,7 +790,7 @@
     }
 
     /* Tarjetas */
-    .card {
+    .card, .pensar, .torre, .mision, .valores, .torrediseño, .hielo, .termometro, .aislante {
         flex: 1 1 auto; 
         max-width: 100%; 
         height: auto; 
@@ -752,7 +912,7 @@
   
     .card {
       flex: 1 1 300px; 
-      max-width: 300px; 
+      max-width: 350px; 
       height: 340px; 
       overflow-y: scroll;
     }
